fixed styling bugs on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    padding: 1rem;
+    /* padding: 1rem; */
     background: linear-gradient(155deg, rgba(185, 27, 27, 1) 0%, rgb(118 0 181) 100%);
     width: 100%;
     height: 100%;
@@ -39,7 +39,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-height: 90vh;
+
+    min-width: 80%;
+    max-height: 90%;
 }
 
 .quote {
@@ -75,7 +77,7 @@ blockquote {
 .title {
     background-color: var(--secondary);
     font-weight: 400;
-    transform: translate(-25%, 50%);
+    transform: translate(-7%, 50%);
 
 }
 
